# nist-hardening-suite

./: .ansible-lint  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  APP_RECOMMENDED_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  ansible.cfg  monitoring.yml  nuke.yml  pyproject.toml  requirements.txt  requirements.yml  site.yml  stacks.yml
.github/workflows/: ansible-lint.yml  ci.yml  security-audit.yml
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/compliance/: AUDIT_EVIDENCE.md  COMPLIANCE.md  COMPLIANCE_MAPPINGS.md  REGULATORY_REFERENCES.md
docs/operations/: COMMANDS.md  COMPATIBILITY.md  PRODUCTION_COMMAND_AUDIT.md
docs/operations/apps/: APP_RECOMMENDED_GUIDE.md
docs/project/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  RELEASE.md  ROADMAP.md
group_vars/all/: images.yml  main.yml  secrets.yml.example
group_vars/brain/: caddy.yml  firewall.yml  main.yml
group_vars/muscle/: caddy.yml  firewall.yml  main.yml
inventory/: hosts.ini.example  hosts.ini.test
recommended_apps/chatwoot/: .env.example  docker-compose.yml
recommended_apps/metabase/: .env.example  docker-compose.yml
recommended_apps/n8n/: .env.example  docker-compose.yml
recommended_apps/openwebui/: .env.example  docker-compose.yml
recommended_apps/twenty-crm/: .env.example  docker-compose.yml
recommended_apps/uptime-kuma/: .env.example  docker-compose.yml
roles/common/tasks/: apt_refresh.yml  main.yml
scripts/: monitor-crowdsec.sh  setup.sh
(+28 files in other folders)
