[project]
name = "nist-hardening-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible-core==2.20.4",
    "ansible-lint==26.4.0",
    "ansible-vault==4.1.0",
    "detect-secrets==1.5.0",
    "jinja2==3.1.6",
    "pre-commit==4.5.1",
    "pyyaml==6.0.3",
    "yamllint==1.38.0",
]
